화면 구성에 관한 레퍼런스 조사

--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -1,3 +1,9 @@
 ### 화면 크기
 
 - https://zzznara2.tistory.com/622
+
+### 화면 구성
+
+- 버튼 구성 혹은 기타 구성들에 관한 내용
+- https://brunch.co.kr/@thinkaboutlove/248
+<br> 해당 자료는 별도로 추가 정리를 진행해볼 예정입니다.
