참고할만한 UX 자료 첨부

--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -7,3 +7,17 @@
 - 버튼 구성 혹은 기타 구성들에 관한 내용
 - https://brunch.co.kr/@thinkaboutlove/248
 <br> 해당 자료는 별도로 추가 정리를 진행해볼 예정입니다.
+
+
+### 팝업에 대한 아티클
+
+- 팝업에 대한 날카로운 분석글
+- https://thinkofweb.net/121
+<br> 화면 구성과 함께 정리 예정입니다.
+
+### 올바른 플레이스홀더 텍스트에 관한 아티클
+
+- UX적으로 올바른 제안 방법에 대한 작성글
+- https://brunch.co.kr/@ebprux/250
+<br> 향후 작성 방식을 해당 내용 처럼 진행하고자 합니다.
+<br> UX 기본 소양
