리스트와 그리드 뷰 차이

--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -8,6 +8,10 @@
 - https://brunch.co.kr/@thinkaboutlove/248
 <br> 해당 자료는 별도로 추가 정리를 진행해볼 예정입니다.
 
+- 리스트와 그리드뷰에 대한 정리
+- https://brunch.co.kr/@monodream/59 
+<br> 과도한 스크롤을 방지 vs 세부정보를 제공
+
 
 ### 팝업에 대한 아티클
 
