--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -12,6 +12,11 @@
 - https://brunch.co.kr/@monodream/59 
 <br> 과도한 스크롤을 방지 vs 세부정보를 제공
 
+### 워딩의 중요성
+
+- 한 화면에 많은 워딩이 들어올 경우 난잡할 수 있음
+- https://designcompass.org/2020/12/11/%EB%B0%80%EB%9F%AC%EC%9D%98-%EB%B2%95%EC%B9%99/
+<br> 5~9개의 워딩으로 화면을 적절히 구성하는 것이 좋음 (단, 필수 조건은 아님 앱에 맞추는 것이 기획자의 능력)
 
 ### 팝업에 대한 아티클
 
