참고 링크 변경

--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -30,3 +30,7 @@
 - https://brunch.co.kr/@ebprux/250
 <br> 향후 작성 방식을 해당 내용 처럼 진행하고자 합니다.
 <br> UX 기본 소양
+
+
+### 참고자료 
+- 와이어프레임, 스토리보드 비교 참고 링크 : https://yslab.kr/74
