--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -34,3 +34,7 @@
 
 ### 참고자료 
 - 와이어프레임, 스토리보드 비교 참고 링크 : https://yslab.kr/74
+
+### Dictionary 정리해야하는 자료
+- 모바일 앱 지표 분석 방법론, https://brunch.co.kr/@andrewyhc/68
+- 사용자 지표에 관련된 내용, https://brunch.co.kr/@userhabit/19
