Stickness 내용 추가

--- a/WEB/참고자료.md
+++ b/WEB/참고자료.md
@@ -38,3 +38,4 @@
 ### Dictionary 정리해야하는 자료
 - 모바일 앱 지표 분석 방법론, https://brunch.co.kr/@andrewyhc/68
 - 사용자 지표에 관련된 내용, https://brunch.co.kr/@userhabit/19
+- 사용자 지표, http://www.wisetracker.co.kr/blog/post-install-metrics-that-matter/
