--- a/COMMON/서비스기획자 면접질문.md
+++ b/COMMON/서비스기획자 면접질문.md
@@ -6,6 +6,8 @@
 4. 퇴사 후 주로 무엇을 하고 지내나요?
 5. 회사를 선택하는 데 있어서 주로 보는 요인은 무엇인가요?
 6. 업무를 할 때 종종 야근을 할 수는 있는데 이런 경우 본인은 어떻게 느끼시나요?
+7. 본인이 겪은 일들에 대해서 우리가 알 수 있도록 들려주실 수 있나요?
+8. 스트레스는 어떻게 관리하시나요?
 
 ### 업무에 관한 내용
 
@@ -15,3 +17,4 @@
 4. 업무를 진행하면서 충돌을 겪은 경험이 있는지? 그런 경우에 어떻게 해결했는지?
 5. 서비스 기획자가 가져야할 자질
 6. 개발자﹒디자이너와 소통을 할 때 누구와 소통을 하는 것이 더 편한가요? 그 이유도 설명해 주실 수 있나요?
+7. 만약에 업무 시 경력이 많은 사람의 의견이 틀렸다고 생각될 때, 어떻게 업무 처리를 진행할 것인가요?
