--- a/UX/프로덕트 개발 라이프사이클.md
+++ b/UX/프로덕트 개발 라이프사이클.md
@@ -17,3 +17,19 @@ UX 디자이너는 제품 개발 수명 주기의 설계 단계에 가장 많이
 
 브레인스토밍 단계는 제품의 경쟁사를 확인하고 이미 시장에 유사한 제품이 있는지 확인할 수 있는 이상적인 시간이기도 합니다. 만드는 제품이 시장의 공백을 메우거나 기존 제품보다 문제를 더 잘 해결하기를 희망하기도 합니다. 경쟁업체와 사용자 모두에 대한 조사를 완료하면 제품 설계에서 해결해야 할 문제를 파악하는 데 도움이 됩니다.
 
+## 제품 정의
+
+제품 개발 수명 주기의 두 번째 단계에서는 UX 디자이너, UX 연구원, 프로그램 관리자 및 제품 리드가 모여 제품을 정의합니다.
+목표는 다음과 같은 질문에 답함으로써 제품의 사양을 파악하는 것입니다. 
+- 누구를 위한 제품인가요? 
+- 그 제품은 어떤 기능을 할까요? 
+- 제품이 성공하기 위해서는 어떤 기능이 포함되어야 하나요?
+
+정의 단계에서 팀은 아이디어의 초점을 좁힙니다. 
+제품은 모든 사용자 문제를 해결할 수는 없습니다. 
+맞벌이하는 부모와 보호자를 돕는 앱의 예를 계속하면서, 독자 분의 아이디어는 부모와 보호자가 신뢰할 수 있는 육아를 찾거나 일정을 관리하는 것을 돕는 데 초점을 맞춰야 합니다. 
+이 단계에서 UX 디자이너는 팀이 아이디어의 초점을 정확히 잡는 데 도움을 줄 수 있지만, 프로젝트의 범위를 정의하는 것은 제품을 생산하는 리더 일 것입니다.
+
+브레인스토밍 단계에서 완료하신 리서치는 이번 단계에서 유용하게 사용되고 있습니다. 
+배운 내용을 사용하여 잠재적인 사용자의 문제를 정확하게 파악할 수 있습니다. 
+사용자 팀은 사용자에게 직접 묻지 않고는 사용자가 겪고 있는 문제를 알고 있다고 가정할 수 없습니다.
