--- a/UX/프로덕트 개발 라이프사이클.md
+++ b/UX/프로덕트 개발 라이프사이클.md
@@ -33,3 +33,20 @@ UX 디자이너는 제품 개발 수명 주기의 설계 단계에 가장 많이
 브레인스토밍 단계에서 완료하신 리서치는 이번 단계에서 유용하게 사용되고 있습니다. 
 배운 내용을 사용하여 잠재적인 사용자의 문제를 정확하게 파악할 수 있습니다. 
 사용자 팀은 사용자에게 직접 묻지 않고는 사용자가 겪고 있는 문제를 알고 있다고 가정할 수 없습니다.
+
+
+## 디자인
+
+제품 개발 수명 주기의 세 번째 단계는 디자인입니다. 
+이 단계에서 UX 디자이너들은 제품에 대한 아이디어를 구현해냅니다. 
+일반적으로 UX 디자이너는 제품의 윤곽이나 스케치인 와이어 프레임을 그리는 것으로 시작한 다음 제품의 기능을 전달하는 초기 모델인 프로토타입을 만드는 것으로 넘어갑니다.
+
+UX 작성자들은 또한 디자인 단계에 관여하며, 제품의 와이어 프레임과 프로토타입 내에서 버튼 레이블이나 기타 카피와 같은 것들을 할 수 있다.
+
+정의 단계에서 개요된 모든 제품 사양을 포함해야 합니다. 
+설계의 각 부품이 직관적인 방식으로 서로 적합되는지 확인할 수도 있습니다. 
+
+UX 설계자는 앱의 화면이 사용자에게 적합한 방식으로 흐르는지 확인할 수 있습니다. 
+버튼을 눌렀을 때 인터랙션을 통해 항목이 장바구니에 추가되는 것을 대표적인 예로 들 수 있습니다. 
+
+물리적 제품의 경우 UX 설계자는 물리적 물체의 한 조각이 연결 부분과 일치하는지 확인할 수 있습니다. 마지막으로 홈페이지에서 특정 페이지로 이동하는 것처럼, 사용자가 완료하는 각각의 작업이 명확하고 이해하기 쉽도록 한다.
